name:                love-arrow-shoot
version:             0.1.0.0
synopsis:            A super simple reverse proxy on Warp
description:         Please see README.md
homepage:            https://github.com/noraesae/love-arrow-shoot
license:             BSD3
license-file:        LICENSE
author:              Jun
maintainer:          me@noraesae.net
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable love-arrow-shoot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , love-arrow-shoot
  default-language:    Haskell2010

test-suite love-arrow-shoot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , love-arrow-shoot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/noraesae/love-arrow-shoot
